gitops/app-configs/whoogle-search.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoogle-search-ingress
  namespace: whoogle-search
  annotations:
    kubernetes.io/ingress.class: traefik-external
    # argocd.argoproj.io/hook: Sync
    helm.sh/hook: "post-install"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoogle.local.timmybtech.com`)
      kind: Rule
      services:
        - name: whoogle-search
          port: 5000
  tls:
    secretName: local-timmybtech-com-tls # or local-example-com-staging-tls
